fixed light responsiveness, fixed mobile screen stretch and fixed routing

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,17 +6,19 @@
   box-sizing: border-box;
 }
 
-html,
 body {
+  position: relative;
   font-family: "Lato", sans-serif; /* Fallback font */
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  max-height: 100vh;
+  height: 100vh;
+  max-width: 100vw;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   text-align: center;
   background-color: #111;
+  text-align: center;
   color: white;
 }
